include/editeng/urlfieldhelper.hxx
@@ -19,6 +19,10 @@ class EDITENG_DLLPUBLIC URLFieldHelper
 public:
     static void RemoveURLField(EditView& pEditView);
     static bool IsCursorAtURLField(const EditView& pEditView);
+    static bool IsCursorAtURLField(const OutlinerView* pOLV)
+    {
+        return pOLV && IsCursorAtURLField(pOLV->GetEditView());
+    }
 };
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab cinoptions=b1,g0,N-s cinkeys+=0=break: */
