sd/source/ui/view/drviews2.cxx
@@ -1199,8 +1199,10 @@ void DrawViewShell::FuTemporary(SfxRequest& rReq)
                 // First make sure the field is selected
                 OutlinerView* pOutView = mpDrawView->GetTextEditOutlinerView();
                 if (pOutView)
+                {
                     pOutView->SelectFieldAtCursor();
-                URLFieldHelper::RemoveURLField(pOutView->GetEditView());
+                    URLFieldHelper::RemoveURLField(pOutView->GetEditView());
+                }
             }
         }
         Cancel();
